--- a/Programming/JavaScript/NodeJS/ToDoApp/views/header.ejs
+++ b/Programming/JavaScript/NodeJS/ToDoApp/views/header.ejs
@@ -8,3 +8,4 @@
     <link rel="stylesheet" href="css/styles.css" </head>
 
 <body>
+    <a href="/"><i class="fa fa-fw fa-table"></i> Home</a> | <a href="/work"><i class="fa fa-fw fa-table"></i> Work</a>
