--- a/Programming/JavaScript/NodeJS/ToDoAppDB/public/css/styles.css
+++ b/Programming/JavaScript/NodeJS/ToDoAppDB/public/css/styles.css
@@ -1,6 +1,5 @@
 html {
   background-color: #E4E9FD;
-  /* create a gradient for background */
   background-image: -webkit-linear-gradient(65deg, #A683E3 50%, #E4E9FD 50%);
   min-height: 1000px;
   font-family: 'helvetica neue';
@@ -20,7 +19,7 @@ h1 {
 }
 
 #heading {
-  background-color: #644c8d;
+  background-color: #A683E3;
   text-align: center;
 }
 
@@ -35,13 +34,11 @@ h1 {
   border-bottom: 0;
 }
 
-/* for checked items */
 input:checked+p {
   text-decoration: line-through;
   text-decoration-color: #A683E3;
 }
 
-/* APPLY style based on attribute */
 input[type="checkbox"] {
   margin: 20px;
 }
@@ -54,7 +51,7 @@ p {
   color: #00204a;
 }
 
-form {
+form.item {
   text-align: center;
   margin-left: 20px;
 }
