--- a/Programming/Python/flask_practice/flask_plotly/templates/index.html
+++ b/Programming/Python/flask_practice/flask_plotly/templates/index.html
@@ -13,6 +13,7 @@
             <label> Choose the plot type....</label>
             <select class="form-control" id ='first_cat'>
                 <option value="Bar">Bar</option>
+                <option value="Test">Test</option>
                 <option value="Scatter">Scatter</option>
             </select>
         </div>
